--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,12 @@
-body {
+@import 'styles/layout.scss';
+@import 'styles/_colors.scss';
+
+* {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+body {
+  background: map-get($colors, white);
 }
