--- a/client/src/components/ContactCard/contact-card.scss
+++ b/client/src/components/ContactCard/contact-card.scss
@@ -1,5 +1,5 @@
 $bR: 13px;
-$color: #E83267;
+$color: #e83267;
 
 @mixin transition() {
   transition: all 600ms cubic-bezier(0.2, 0.8, 0.2, 1) 0ms;
@@ -19,14 +19,14 @@ $color: #E83267;
 
     // container:after
     &:after {
-      content: '';
+      content: "";
       position: absolute;
       left: 0;
       right: 0;
       bottom: 0;
       top: 0;
       border-radius: $bR;
-      box-shadow: 0 50px 100px -20px rgba(#000, .5);
+      box-shadow: 0 50px 100px -20px rgba(#000, 0.5);
       @include transition();
     }
 
@@ -44,7 +44,7 @@ $color: #E83267;
       .contact-card__image {
         transform: translateY(30px);
         transition-duration: 1600ms;
-        transition-timing-function:  cubic-bezier(0.13, 1.26, 0.79, 0.96);
+        transition-timing-function: cubic-bezier(0.13, 1.26, 0.79, 0.96);
       }
 
       .contact-card__content:after {
@@ -64,25 +64,29 @@ $color: #E83267;
 
     // image-container:after
     &:after {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      background: radial-gradient(circle at top, rgba(#fff, .2), rgba(#fff, 0) 80%);
+      background: radial-gradient(
+        circle at top,
+        rgba(#fff, 0.2),
+        rgba(#fff, 0) 80%
+      );
       transform: translateY(-160px);
       @include transition();
     }
 
     &:before {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       right: 0;
       left: 0;
       bottom: 0;
-      box-shadow: inset 0 0 0 1px rgba(#000, .3);
+      box-shadow: inset 0 0 0 1px rgba(#000, 0.3);
       border-top-left-radius: $bR;
       border-top-right-radius: $bR;
       @include transition();
@@ -90,7 +94,7 @@ $color: #E83267;
     }
   }
 
-  &__image { 
+  &__image {
     height: 100%;
     @include transition();
   }
@@ -103,14 +107,18 @@ $color: #E83267;
     padding: 30px;
     line-height: 1.8;
     background: $color;
-    background: radial-gradient(circle at top center, lighten($color, 6), $color);
+    background: radial-gradient(
+      circle at top center,
+      lighten($color, 6),
+      $color
+    );
     border-bottom-left-radius: $bR;
     border-bottom-right-radius: $bR;
     @include transition();
     z-index: 2;
 
     &:after {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       bottom: 0;
@@ -118,8 +126,8 @@ $color: #E83267;
       right: 0;
       border-bottom-left-radius: $bR;
       border-bottom-right-radius: $bR;
-      box-shadow: inset 0 0 0 1px rgba(#000, .3),
-        0 4px 40px -3px rgba($color, .8);
+      box-shadow: inset 0 0 0 1px rgba(#000, 0.3),
+        0 4px 40px -3px rgba($color, 0.8);
       @include transition();
     }
   }
@@ -128,8 +136,8 @@ $color: #E83267;
     text-decoration: none;
 
     &:not(#{&}--name) {
-      opacity: .7;
-      color: rgba(#000, .6);
+      opacity: 0.7;
+      color: rgba(#000, 0.6);
     }
 
     &--name {
