--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,10 +1,12 @@
-@import 'styles/layout.scss';
-@import 'styles/_colors.scss';
+@import "styles/layout.scss";
+@import "styles/_colors.scss";
+
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
