--- a/client/src/styles/_colors.scss
+++ b/client/src/styles/_colors.scss
@@ -1,8 +1,9 @@
 $colors: (
-  white: #F6FCFF,
-  blue: #07445E,
-  dark-blue: #052C3D,
-  darkest-blue: #041D29,
-  light-blue: #C5D7DF,
-  lightest-blue: #DEEAEF,
+  white: #f6fcff,
+  blue: #07445e,
+  dark-blue: #052c3d,
+  darkest-blue: #041d29,
+  light-blue: #c5d7df,
+  lightest-blue: #deeaef,
+  fuchsia: #e83267
 );
