--- a/client/src/components/ContactCard/contact-card.scss
+++ b/client/src/components/ContactCard/contact-card.scss
@@ -1,5 +1,7 @@
+@import "../../styles/_colors.scss";
+
 $bR: 13px;
-$color: #e83267;
+$color: map-get($colors, fuchsia);
 
 @mixin transition() {
   transition: all 600ms cubic-bezier(0.2, 0.8, 0.2, 1) 0ms;
