--- a/client/src/components/Homepage/homepage.scss
+++ b/client/src/components/Homepage/homepage.scss
@@ -1,3 +1,5 @@
+@import "../../styles/_colors.scss";
+
 .hero {
   display: flex;
   align-items: center;
@@ -7,7 +9,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    align-items: flex-start;
     padding-right: 160px;
   }
 
@@ -17,10 +19,17 @@
   }
 
   &__title {
+    margin-bottom: 20px;
     font-size: 60px;
+    color: map-get($colors, dark-blue);
+    line-height: 1.13;
   }
 
   &__subtitle {
+    margin-bottom: 20px;
     font-size: 18px;
+    line-height: 1.83;
+    font-weight: normal;
+    color: map-get($colors, light-blue);
   }
 }
