--- a/client/src/components/Homepage/homepage.scss
+++ b/client/src/components/Homepage/homepage.scss
@@ -32,4 +32,51 @@
     font-weight: normal;
     color: map-get($colors, light-blue);
   }
+
+  @keyframes wobble {
+    16.65% {
+      transform: translateY(8px);
+    }
+    33.3% {
+      transform: translateY(-6px);
+    }
+    49.95% {
+      transform: translateY(4px);
+    }
+    66.6% {
+      transform: translateY(-2px);
+    }
+    83.25% {
+      transform: translateY(1px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  &__button {
+    $c: map-get($colors, fuchsia);
+    padding: 14px 26px;
+    font-size: 18px;
+    font-weight: bolder;
+    color: rgba(#fff, 0.9);
+    background: $c;
+    background: linear-gradient(
+      152deg,
+      rgba(232, 106, 50, 1) 0%,
+      $c 39%,
+      lighten($c, 10)
+    );
+    border: 0;
+    border-radius: 8px;
+    box-shadow: inset 0 0 0 1px rgba(#000, 0.18), inset 0 2px rgba(#fff, 0.2),
+      0 2px 18px rgba($c, 0.5);
+    appearance: none;
+    cursor: pointer;
+    transform: perspective(1px) translateZ(0);
+
+    &:hover {
+      animation: wobble 1000ms ease-in-out 1;
+    }
+  }
 }
