exported svg from new artboard

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -12,6 +12,8 @@
 
   &__brand-logo {
     margin-right: 10px;
+    transform: scale(4);
+    transform-origin: top left;
   }
 
   &__brand-title {
