--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -12,7 +12,7 @@
 
   &__brand-logo {
     margin-right: 10px;
-    transform: scale(4);
+    // transform: scale(4);
     transform-origin: top left;
   }
 
