--- a/client/src/components/Homepage/homepage.scss
+++ b/client/src/components/Homepage/homepage.scss
@@ -74,6 +74,7 @@
     appearance: none;
     cursor: pointer;
     transform: perspective(1px) translateZ(0);
+    text-decoration: none;
 
     &:focus {
       outline: none;
