--- a/client/src/components/Logo/logo.scss
+++ b/client/src/components/Logo/logo.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 32px;
   height: 32px;
+  transition: all 300ms ease;
 
   &__border,
   &__arrow-stem,
@@ -13,5 +14,21 @@
     right: 0;
     left: 0;
     bottom: 0;
+    transition: all 300ms ease;
+  }
+
+  @at-root {
+    .header__brand {
+      transition: all 300ms ease;
+    }
+
+    .header__brand:hover &__border {
+      opacity: 0.5;
+    }
+
+    .header__brand:hover &__arrow-stem,
+    .header__brand:hover &__arrow-point {
+      transform: translate(8px, -8px);
+    }
   }
 }
